2002-02-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el: Always require `font' under XEmacs.

	* shimbun/sb-debian.el (shimbun-debian-groups): Add debian-med,
	debian-newmaint-discuss, debian-qa-packages, debian-ssh,
	debian-user-de and debian-user-german.

2002-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-async-exec): Default to nil under MacOS X.

2002-02-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-e21.el (w3m-setup-favicon): Fix handling of
	`w3m-about-xxxx-favicon'.

2002-02-10  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-ruby.el (shimbun-make-contents): Bug fixed.

2002-02-10  Takaaki MORIYAMA  <aka@iris.eonet.ne.jp>

	* shimbun/sb-ruby.el (shimbun-get-headers): Fixed the regexp.

2002-02-10  OHASHI Akira  <bg66@koka-in.org>

	* shimbun/sb-debian.el (shimbun-debian-groups): Add `debian-med'.

2002-02-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-mhonarc.el (shimbun-make-contents): Fix the last
	change.

2002-02-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-mhonarc.el (shimbun-mhonarc-optional-headers): New
	internal variable.
	(shimbun-make-contents): Optional headers which are registerd in
	the variable are inserted to an article.

2002-02-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-icon-data): New buffer local variable.
	(w3m-clear-local-variables): Add `w3m-icon-data'.
	(w3m-copy-local-variables): Ditto.
	(w3m-fontify-anchors): Setup `w3m-icon-data'.
	(w3m-check-link-tags): Parse `type' of link attribute;
	Set `w3m-icon-data' if `icon' rel attribute exist.
	(w3m-goto-url): Added local variable real-data.

	* w3m-e21.el (w3m-favicon-cache-favicon): Added compatibility code.
	(w3m-setup-favicon): Use w3m-icon-data if it exists;
	Changed first argument for `w3m-retrieve-favicon'.
	(w3m-buffer-favicon): Use car of `w3m-current-favicon-data' as
	image data and cdr as image type.
	(w3m-retrieve-favicon): Changed first argument to cons cell of
	image data and its type.
